--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -103,11 +103,11 @@
 
 .main__navbar {
   padding: 15px 0px;
-  background: #000d6b;
+  background: #000000;
 }
 
 .mobile__menu i {
-  color: #fff;
+  color: #ffffff;
   font-size: 1.3rem;
   cursor: pointer;
 }
@@ -129,16 +129,16 @@
 }
 
 .nav__item:hover {
-  color: #f9a826;
+  color: #f41c1c;
 }
 
 .search__box {
-  border: 1px solid #7c8a972f;
+  border: 1px solid #5391ef9d;
   padding: 7px 12px;
   display: flex;
   align-items: center;
   border-radius: 50px;
-  background: #020a4de9;
+  background: #000d6b;
 }
 
 .search__box input {
@@ -173,7 +173,7 @@
   }
 
   .navigation {
-    background: rgb(0, 13, 107, 0.6);
+    background: rgba(205, 157, 12, 0.6);
     width: 100%;
     height: 100%;
     position: fixed;
